UniversityCRM/force-app/main/default/objects/Enrollment__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>