UniversityCRM/force-app/main/default/objects/Enrollment__c/fields/Enrollment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Enrollment External Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>