UniversityCRM/force-app/main/default/objects/Enrollment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>