UniversityCRM/force-app/main/default/objects/Enrollment__c/fields/Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade__c</fullName>
    <formula>If(Grade__c &gt;= 9,&quot;A&quot;,
If(Grade__c &gt;= 7,&quot;B&quot;,
If(Grade__c &gt;= 5,&quot;C&quot;,&quot;F&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Grade</label>
    <type>Text</type>
</CustomField>