UniversityCRM/force-app/main/default/objects/Enrollment__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <formula>TEXT(Course__r.Semester__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semester</label>
    <type>Text</type>
</CustomField>