UniversityCRM/force-app/main/default/objects/Enrollment__c/fields/Withdraw_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_Date__c</fullName>
    <defaultValue>Null</defaultValue>
    <label>Withdraw Date</label>
    <type>Date</type>
</CustomField>