UniversityCRM/force-app/main/default/objects/Enrollment__c/validationRules/Check_enrollment_status_and_Course_id.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_enrollment_status_and_Course_id</fullName>
    <active>true</active>
    <description>If status is &quot;Enrolled&quot; there should be a valid Course Id</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Enrolled&quot;), ISBLANK( Course__c ))</errorConditionFormula>
    <errorMessage>Course Details needed for  status &quot;Enrolled&quot;</errorMessage>
</ValidationRule>